--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="iPUDrEtwpWUGXqpsa5XY-xMD4mQ5ABgFFpGPvzBZp5M" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ngawi - Kota Ramah</title>
     <link rel="stylesheet" href="styles/style.css" />
